--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     margin:0;
     padding:0;
     border:none;
+    outline: none;
     box-sizing: border-box;
 }
 
@@ -15,7 +16,6 @@ body{
     
     display:flex;
 }
-
 
 
 .bg{
@@ -38,7 +38,7 @@ body{
     flex:2;
 
     position: relative;
-    bottom:190px;
+    bottom:220px;
 
     display: flex;
     flex-direction: row;
@@ -62,8 +62,6 @@ body{
 }
 
 
-
-
 .form-col,
 .field,
 .top,
@@ -71,7 +69,6 @@ body{
     display:flex;
     flex-direction: column;
 }
-
 
 
 .content{
@@ -106,7 +103,7 @@ body{
     padding:30px;
 }
 
-.form{
+form{
     display:flex;
     gap:30px;
 }
@@ -128,9 +125,19 @@ input{
     font-size: 1.1rem;
     border:2px solid #E5E7EB;
     border-radius: 4px;
-
+    
+    padding:3px;
     height: 34px;
     max-width: 280px;
+}
+
+input:focus{
+    border:3px solid #5688ea;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
+input:invalid{
+    border:3px solid #c44040;
 }
 
 .bottom{
@@ -141,6 +148,8 @@ input{
 button{
     color:white;
     font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
     background: #596d48;
     
     padding:16px 48px;
